work with basic speed start stop etc

--- a/game-of-life/src/style.css
+++ b/game-of-life/src/style.css
@@ -12,7 +12,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
 }
 
 :root {
@@ -23,8 +22,9 @@
 
 .board {
   width: calc((var(--cell-size) + var(--border-size) + 1) * var(--cell-number));
-  height: calc((var(--cell-size) + var(--border-size) + 1) * var(--cell-number));
-
+  height: calc(
+    (var(--cell-size) + var(--border-size) + 1) * var(--cell-number)
+  );
 }
 
 .row {
@@ -35,7 +35,7 @@
   align-items: center;
 }
 
-.cell{
+.cell {
   height: var(--cell-size);
   width: var(--cell-size);
   border: var(--border-size) grey solid;
@@ -46,5 +46,42 @@
 }
 
 .cell--dead {
-  background-color: white;
+  background-color: peachpuff;
+}
+
+.advance-button {
+  width: 100px;
+  height: 30px;
+  background-color: red;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  position: fixed;
+  top: 50%;
+  right: 5%;
+}
+
+.auto-buttons {
+  width: 100px;
+  height: 60px;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  position: fixed;
+  top: 40%;
+  right: 5%;
+}
+
+.speed-input {
+  width: 100px;
+}
+
+.start-stop-button {
+  width: 100px;
+  height: 30px;
+  background-color: red;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
 }
