move buttons to bottom to start mobile styling, need to rethink design - main buttons available, pop up for rest

--- a/game-of-life/src/style.css
+++ b/game-of-life/src/style.css
@@ -110,10 +110,9 @@
   background-color: grey;
   padding: 1vmin;
   position: fixed;
-  right: 0%;
-  top: 0%;
+  bottom: 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   border-radius: 0.5vmin;
 }
 .button-holder {
